Bug 795544 - Make StringEncoding API available from xpcshell/jsm. r=bz